adjust translation for the whole prices section

--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -1,7 +1,7 @@
 <section id="pilates-prices" class="pilates-prices-section">
   <div class="container">
-    <h2 class="section-title">Pilates Plans</h2>
-    <p class="section-description">Find the best pilates plan that fits your needs and lifestyle.</p>
+    <h2 class="section-title">{{ 'MAIN.PRICES.PRICES_TITLE' | translate }}</h2>
+    <p class="section-description">{{ 'MAIN.PRICES.PRICES_PARAGRAPH' | translate }}</p>
 
     <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h1>
     <table class="price-table">
@@ -49,41 +49,41 @@
     <table class="price-table">
       <thead>
       <tr>
-        <th>Classes</th>
-        <th>Prices</th>
-        <th>Visits</th>
+        <th>{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</th>
+        <th>{{ 'MAIN.PRICES.TABLE.PRICES' | translate }}</th>
+        <th>{{ 'MAIN.PRICES.TABLE.VISITS' | translate }}</th>
       </tr>
       </thead>
       <tbody>
       <tr>
-        <td>1 Training</td>
+        <td>1 {{ 'MAIN.PRICES.TABLE.TRAINING' | translate }}</td>
         <td>45 BGN</td>
-        <td>Single training</td>
+        <td>{{ 'MAIN.PRICES.TABLE.SINGLE_TRAINING' | translate }}</td>
       </tr>
       <tr>
-        <td>4 Trainings</td>
+        <td>4 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>168 BGN</td>
-        <td>per month</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
       </tr>
       <tr>
-        <td>8 trainings</td>
+        <td>8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>320 BGN</td>
-        <td>per month</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
       </tr>
       <tr>
-        <td>12 trainings</td>
+        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>420 BGN</td>
-        <td>per month</td>
+        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
       </tr>
       <tr>
-        <td>12 trainings</td>
+        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>500 BGN</td>
-        <td>Unlimited period</td>
+        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
       </tr>
       <tr>
-        <td>20 trainings</td>
+        <td>20 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>650 BGN</td>
-        <td>Unlimited period</td>
+        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
       </tr>
       </tbody>
     </table>
