--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -116,15 +116,13 @@ header:hover {
   padding: 14px 30px;
   text-decoration: none;
   text-shadow: 0px 1px 0px #283966;
+  margin-right: 10px;
 }
 
-#contacts_link:active {
-  position: relative;
-  top: 1px;
-}
 
 #contacts_link:hover {
   background-color: #8bbcdc;
-  font-size: 20px;
 }
+
+
 
