adjust contact link in header and add color for color modules

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -12,7 +12,7 @@
       <li><a routerLink="/gallery" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.GALLERY' | translate }}</a></li>
       <li><a routerLink="/about-us" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.ABOUT_US' | translate }}</a></li>
     </ul>
-    <button id="contacts_link" onclick="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</button>
+    <button class="contacts_link" (click)="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</button>
     <div class="language-select">
       <select id="languageDropdown" (change)="switchLanguage($event)">
         <option value="main-en" data-icon="🇬🇧" selected>🇬🇧</option>
