--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -6,7 +6,7 @@
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
       <p class="intro-hero__paragraph">Providing the best care for your body and mind that will be appreciated by your
         <b>soul.</b></p>
-      <a href="" class="btn">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
+      <a class="btn" (click)="navigateToContacts()">{{ 'MAIN.HOME.GET_IN_TOUCH' | translate }}</a>
     </div>
   </div>
   <div class="middle-hero page-section">
