--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,9 +1,11 @@
-<header>
+<header [ngClass]="{'site-header__is-expanded': menuOpen}" class="site-header">
   <div class="logo_container">
     <img src="./assets/images/image_123650291.JPG" alt="pil_logo" class="header_logo">
+    <h1 class="header_title">ReformFlow</h1>
   </div>
   <nav class="header_nav">
-    <ul class="nav_list">
+    <div class="header_nav__menu-icon" (click)="toggleMenu()"></div>
+    <ul [ngClass]="{'nav_list__expanded': menuOpen}" class="nav_list">
       <li><a routerLink="" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.HOME' | translate }}</a></li>
       <li><a routerLink="/news" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.NEWS' | translate }}</a></li>
       <li><a routerLink="/prices" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.PRICES' | translate }}</a></li>
@@ -12,7 +14,7 @@
       <li><a routerLink="/gallery" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.GALLERY' | translate }}</a></li>
       <li><a routerLink="/about-us" routerLinkActive="active-link">{{ 'MAIN.HEADER.NAV.ABOUT_US' | translate }}</a></li>
     </ul>
-    <button class="contacts_link" (click)="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</button>
+    <a class="contacts_link" (click)="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</a>
     <div class="language-select">
       <select id="languageDropdown" (change)="switchLanguage($event)">
         <option value="main-en" data-icon="🇬🇧" selected>🇬🇧</option>
