--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -1,6 +1,6 @@
 @import '../../../assets/base/global';
 
-header {
+.site-header {
   position: fixed;
   top: 0;
   width: 100%;
@@ -10,7 +10,23 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  transition: height 0.3s ease-in;
   z-index: 1;
+
+  &__is-expanded {
+    height: 150px;
+  }
+
+  .header_title {
+    display: inline-block;
+    color: #FFFFFF;
+    font-weight: 200;
+    margin: 0 0 0 100px;
+
+    @include atMedium {
+      margin: 5% 0 0 100px;
+    }
+  }
 
   .header_nav {
     display: flex;
@@ -18,32 +34,70 @@ header {
     margin-right: 40px;
 
 
-    .nav_list {
-      list-style: none;
-      display: flex;
-      align-items: center;
+    &__menu-icon {
+      width: 20px;
+      height: 20px;
+      background-color: #FFFFFF;
+      position: absolute;
+      top: 10px;
+      right: 10px;
 
-      li {
-        margin: 0 15px;
-        font-size: 23px;
+      @include atMedium {
+        display: none;
+      }
+    }
+
+    .nav_list {
+      display: none;
+
+      @include atMedium {
+        display: flex;
+        align-items: center;
+        list-style: none;
+
+        li {
+          margin: 0 15px;
+          font-size: 23px;
+        }
+
+        a {
+          color: white;
+          text-decoration: none;
+          transition: font-size 0.3s ease-in-out;
+        }
       }
 
-      a {
-        color: white;
-        text-decoration: none;
-        transition: font-size 0.3s ease-in-out;
+      &__expanded {
+        display: inline-block;
+        list-style: none;
+
+        li {
+          font-size: 20px;
+          margin-right: 10px;
+        }
+
+        a {
+          color: white;
+          text-decoration: none;
+        }
       }
     }
 
     .nav_list a:hover {
-      color: #ededd2;
-      font-size: 26px;
-      text-decoration: none;
+
+      @include atMedium{
+        color: #ededd2;
+        font-size: 26px;
+        text-decoration: none;
+      }
     }
 
     .nav_list a:focus {
-      color: #6ec7e1;
-      text-decoration: none;
+
+      @include atMedium{
+        color: #6ec7e1;
+        text-decoration: none;
+      }
     }
   }
 }
@@ -66,19 +120,15 @@ header:hover {
 }
 
 .header_logo {
-  display: none;
-
-  @include headerNav{
-    display: block;
-    position: absolute;
-    border-radius: 50%;
-    top: -5px;
-    left: -3px;
-    height: 98px;
-    width: auto;
-    object-fit: contain;
-    transition: height 0.5s ease;
-  }
+  display: block;
+  position: absolute;
+  border-radius: 50%;
+  top: -5px;
+  left: -3px;
+  height: 98px;
+  width: auto;
+  object-fit: contain;
+  transition: height 0.5s ease;
 }
 
 .language-select {
@@ -91,24 +141,27 @@ header:hover {
 }
 
 .contacts_link {
-  background-color: rgb(255, 149, 159);
-  border-radius: 11px;
-  border: 1px solid #1e2029;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 14px;
-  padding: 14px 30px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #283966;
-  margin-right: 10px;
+  display: none;
+
+  @include atMedium {
+    background-color: rgb(255, 149, 159);
+    border-radius: 11px;
+    border: 1px solid #1e2029;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: 14px;
+    padding: 14px 30px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #283966;
+    margin-right: 10px;
+  }
 }
 
 .contacts_link:hover {
   color: #0c0d0c;
   background-color: $mainTurquoise;
 }
-
 
 .contacts_link:active {
   background-color: $mainRoseAsh;
