adjust prices for tables and add translation keys

--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -36,12 +36,12 @@
       <tr>
         <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>300 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
       </tr>
       <tr>
-        <td>20 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>400 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
       </tr>
       </tbody>
     </table>
@@ -78,12 +78,12 @@
       <tr>
         <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
         <td>500 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
       </tr>
       <tr>
-        <td>20 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>650 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.UNLIMITED' | translate }}</td>
+        <td>18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+        <td>620 BGN</td>
+        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
       </tr>
       </tbody>
     </table>
