adjust header nav menu and remove select tag for now

--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -1,4 +1,6 @@
 @import '../../../assets/base/global';
+@import 'boxicons';
+
 
 .site-header {
   position: fixed;
@@ -10,11 +12,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  transition: height 0.3s ease-in;
+  transition: display 0.3s ease-in;
   z-index: 1;
 
-  &__is-expanded {
-    height: 150px;
+
+  .logo_container {
+    height: 80%;
+  }
+
+  .header_logo {
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+    top: -5px;
+    left: -3px;
+    height: 98px;
+    width: auto;
+    object-fit: contain;
+    //transition: height 0.5s ease;
   }
 
   .header_title {
@@ -28,64 +43,78 @@
     }
   }
 
-  .header_nav {
-    display: flex;
-    align-items: center;
-    margin-right: 40px;
+  .icons {
+    font-size: 2.8rem;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-flex;
+    position: absolute;
+    right: 5%;
 
-
-    &__menu-icon {
-      width: 20px;
-      height: 20px;
-      background-color: #FFFFFF;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-
-      @include atMedium {
-        display: none;
-      }
+    #close-icon {
+      display: none;
     }
 
-    .nav_list {
+    #menu-icon {
+
+    }
+
+    @include atMedium {
       display: none;
+    }
+  }
+
+  .header_nav {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    backdrop-filter: blur(50px);
+    display: none;
+    z-index: -1;
+
+    .nav_list {
+      color: white;
+      margin-right: 40px;
+
+      li {
+        text-align: center;
+        list-style: none;
+        margin: 1.5rem 0;
+        color: #FFFFFF;
+      }
+
+      a {
+        color: #454343;
+        text-decoration: none;
+      }
+
+      .contacts_link_mobile {
+        border: 1px solid white;
+        padding: 4px;
+        border-radius: 5px;
+      }
 
       @include atMedium {
         display: flex;
         align-items: center;
-        list-style: none;
 
         li {
           margin: 0 15px;
-          font-size: 23px;
+          font-size: 18px;
         }
 
         a {
-          color: white;
-          text-decoration: none;
-          transition: font-size 0.3s ease-in-out;
-        }
-      }
-
-      &__expanded {
-        display: inline-block;
-        list-style: none;
-
-        li {
-          font-size: 20px;
-          margin-right: 10px;
-        }
-
-        a {
-          color: white;
-          text-decoration: none;
+          color: #FFFFFF;
+          transition: font-size 0.4s ease-in-out;
         }
       }
     }
 
     .nav_list a:hover {
+      color: #ca626a;
 
-      @include atMedium{
+      @include atMedium {
         color: #ededd2;
         font-size: 26px;
         text-decoration: none;
@@ -94,15 +123,34 @@
 
     .nav_list a:focus {
 
-      @include atMedium{
+      @include atMedium {
         color: #6ec7e1;
         text-decoration: none;
       }
     }
+
+    @include atMedium {
+      display: flex;
+      position: static;
+      top: 0;
+      color: #FFFFFF;
+      align-items: center;
+      margin-right: 40px;
+      background-color: transparent;
+      width: auto;
+    }
   }
 }
 
-select {
+.header_nav.active {
+  display: block !important;
+}
+
+.site-header:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.language-dropdown {
   padding: 0;
   font-size: 30px;
   background: transparent;
@@ -111,33 +159,9 @@ select {
   cursor: pointer;
 }
 
-header:hover {
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-}
-
-.logo_container {
-  height: 80%;
-}
-
-.header_logo {
-  display: block;
-  position: absolute;
-  border-radius: 50%;
-  top: -5px;
-  left: -3px;
-  height: 98px;
-  width: auto;
-  object-fit: contain;
-  transition: height 0.5s ease;
-}
-
 .language-select {
   position: relative;
   display: inline-block;
-}
-
-.active-link {
-  color: #0c0d0c;
 }
 
 .contacts_link {
@@ -153,7 +177,7 @@ header:hover {
     font-size: 14px;
     padding: 14px 30px;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #283966;
+    text-shadow: 0 1px 0 #283966;
     margin-right: 10px;
   }
 }
