--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,33 +1,35 @@
 <header class="site-header">
-  <div class="logo_container">
-    <img src="./assets/images/image_123650291.JPG" alt="pil_logo" class="header_logo">
-    <h1 class="header_title">ReformFlow Studio</h1>
-  </div>
-  <label class="icons">
-    <i  class="bx bx-menu" id="menu-icon" (click)="toggleMenu()"></i>
-    <i  class="bx bx-x" id="close-icon" (click)="closeMenu()"></i>
+<!--  <div class="logo_container">-->
+<!--    <img src="./assets/images/image_123650291.JPG" alt="pil_logo" class="header_logo">-->
+<!--  </div>-->
+  <h1 class="header_title">ReformFlow Studio</h1>
+  <input type="checkbox" id="check">
+  <label for="check" class="icons">
+    <i class="bx bx-menu" id="menu-icon"></i>
+    <i class="bx bx-x" id="close-icon"></i>
   </label>
-  <nav class="header_nav" [class.active]="menuOpen">
+  <nav class="header_nav">
     <ul class="nav_list">
-      <li><a routerLink="" routerLinkActive="active-link" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.HOME' | translate }}</a></li>
-      <li><a routerLink="/news" routerLinkActive="active-link" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.NEWS' | translate }}</a></li>
-      <li><a routerLink="/prices" routerLinkActive="active-link" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.PRICES' | translate }}</a></li>
+      <li><a routerLink="" routerLinkActive="active-link"
+             (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.HOME' | translate }}</a></li>
+      <li><a routerLink="/news" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.NEWS' | translate }}</a></li>
+      <li><a routerLink="/prices" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.PRICES' | translate }}</a></li>
       <li><a routerLink="/reservations" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.RESERVATIONS' | translate }}</a></li>
-      <li><a routerLink="/gallery" routerLinkActive="active-link"(click)="closeMenu()">{{ 'MAIN.HEADER.NAV.GALLERY' | translate }}</a></li>
-      <li><a routerLink="/about-us" routerLinkActive="active-link" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.ABOUT_US' | translate }}</a></li>
-      <li><a routerLink="/contacts" routerLinkActive="active-link" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</a></li>
-      @if(currentLang == 'main-en' || currentLang == undefined){
+      <li><a routerLink="/gallery" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.GALLERY' | translate }}</a></li>
+      <li><a routerLink="/about-us" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.ABOUT_US' | translate }}</a></li>
+      <li><a routerLink="/contacts" (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</a></li>
+      @if (currentLang == 'main-en' || currentLang == undefined) {
         <li><a class="contacts_link_mobile" (click)="switchLanguageToBG()">BG</a></li>
       } @else {
-      <li><a class="contacts_link_mobile" (click)="switchLanguageToEN()">EN</a></li>
+        <li><a class="contacts_link_mobile" (click)="switchLanguageToEN()">EN</a></li>
       }
     </ul>
     <!--    <a class="contacts_link" (click)="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</a>-->
-<!--    <div class="language-select">-->
-<!--      <select class="language-dropdown" (change)="switchLanguage($event)">-->
-<!--        <option value="main-en" data-icon="🇬🇧" selected>🇬🇧</option>-->
-<!--        <option value="main-bg" data-icon="🇧🇬">🇧🇬</option>-->
-<!--      </select>-->
-<!--    </div>-->
+    <!--    <div class="language-select">-->
+    <!--      <select class="language-dropdown" (change)="switchLanguage($event)">-->
+    <!--        <option value="main-en" data-icon="🇬🇧" selected>🇬🇧</option>-->
+    <!--        <option value="main-bg" data-icon="🇧🇬">🇧🇬</option>-->
+    <!--      </select>-->
+    <!--    </div>-->
   </nav>
 </header>
