--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -3,12 +3,12 @@
 <!--    <img src="./assets/images/image_123650291.JPG" alt="pil_logo" class="header_logo">-->
 <!--  </div>-->
   <h1 class="header_title">ReformFlow Studio</h1>
-  <input type="checkbox" id="check">
+  <input type="checkbox" id="check" [checked]="menuOpen" (change)="toggleMenu()" hidden>
   <label for="check" class="icons">
-    <i class="bx bx-menu" id="menu-icon"></i>
-    <i class="bx bx-x" id="close-icon"></i>
+    <i class="bx bx-menu" id="menu-icon" *ngIf="!menuOpen"></i>
+    <i class="bx bx-x" id="close-icon" *ngIf="menuOpen"></i>
   </label>
-  <nav class="header_nav">
+  <nav class="header_nav" [class.active]="menuOpen">
     <ul class="nav_list">
       <li><a routerLink="" routerLinkActive="active-link"
              (click)="closeMenu()">{{ 'MAIN.HEADER.NAV.HOME' | translate }}</a></li>
@@ -24,12 +24,5 @@
         <li><a class="contacts_link_mobile" (click)="switchLanguageToEN()">EN</a></li>
       }
     </ul>
-    <!--    <a class="contacts_link" (click)="navigateToContacts()">{{ 'MAIN.HEADER.NAV.CONTACTS' | translate }}</a>-->
-    <!--    <div class="language-select">-->
-    <!--      <select class="language-dropdown" (change)="switchLanguage($event)">-->
-    <!--        <option value="main-en" data-icon="🇬🇧" selected>🇬🇧</option>-->
-    <!--        <option value="main-bg" data-icon="🇧🇬">🇧🇬</option>-->
-    <!--      </select>-->
-    <!--    </div>-->
   </nav>
 </header>
