add load spinner and add images for the gallery

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-main-section></app-main-section>
+<app-main-section>
+  <span class="loader" *ngIf="isLoading"></span>
+</app-main-section>
 <app-footer></app-footer>
