adjust color for anchor tags on mobile devices

--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -97,11 +97,13 @@
       }
 
       a {
-        color: #454343;
+        font-weight: 500;
+        color: #f44e4e;
         text-decoration: none;
       }
 
       .contacts_link_mobile {
+        color: #FFFFFF;
         border: 1px solid white;
         padding: 4px;
         border-radius: 5px;
