--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -1,5 +1,6 @@
 @import '../../../assets/base/global';
 
+
 .footer {
   display: flex;
   justify-content: space-around;
@@ -21,6 +22,13 @@
     margin-bottom: 1.25rem;
   }
 
+  a {
+    color: #FFFFFF;
+  }
+
+  a:hover {
+    color: black;
+  }
 }
 
 .about-us_container {
@@ -55,8 +63,8 @@
     margin-bottom: 0.9375rem;
 
     img {
-      width: 2.5rem;
-      height: 2.5rem;
+      width: 2rem;
+      height: 2rem;
       list-style: none;
     }
 
