--- a/src/app/components/app-main-section/app-main-section.component.scss
+++ b/src/app/components/app-main-section/app-main-section.component.scss
@@ -1,4 +1,5 @@
-@import '../../../assets/base/_mixins.scss';
+@import '../../../assets/base/global';
+@import '../../../assets/modules/load-spinner';
 
 main {
   margin-top: 100px;
