--- a/src/assets/modules/_load-spinner.scss
+++ b/src/assets/modules/_load-spinner.scss
@@ -1,9 +1,21 @@
 @import './_colors.scss';
 
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Dimmed background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+}
 
 .loader {
-  width: 48px;
-  height: 48px;
+  width: 80px;
+  height: 80px;
   border: 3px solid #FFF;
   border-radius: 50%;
   display: inline-block;
@@ -11,6 +23,7 @@
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
 }
+
 .loader::after {
   content: '';
   box-sizing: border-box;
@@ -18,8 +31,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  width: 40px;
-  height: 40px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
   border: 3px solid;
   border-color: $mainRoseAsh transparent;
