adjust footer social media containers and contacts div

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -66,9 +66,12 @@
       width: 2rem;
       height: 2rem;
       list-style: none;
+      margin-right: 0.3125rem;
     }
 
     a {
+      display: flex;
+      align-items: center;
       text-decoration: none;
       margin-left: 0.3125rem;
     }
