adjust text alignment for contacts section and adjust location link

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -18,7 +18,7 @@
     <ul class="contacts_container__list">
       <li><a type="phone" href="tel:+1234567890"><i class="fa-solid fa-phone"></i>+359 88888888</a></li>
       <li><a
-        href="https://www.google.com/maps/dir/42.6977082,23.3218675/Studentski+Kompleks,+ulitsa+%22Professor+Hristo+Vakarelski%22+19,+1700+Sofia/@42.6788938,23.2974036,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x40aa843e996828b1:0xd0c7eaf62b898f57!2m2!1d23.3389462!2d42.6537159?entry=ttu&g_ep=EgoyMDI1MDMyNS4xIKXMDSoASAFQAw%3D%3D"><i class="fa-solid fa-location-arrow"></i>{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
+        href="https://g.co/kgs/Rp5DPvw"><i class="fa-solid fa-location-arrow"></i>{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
       <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg"><i class="fa-solid fa-envelope"></i>{{ 'ven@abv.bg' }}</a></li>
     </ul>
   </div>
