add new logo svgs and adjust logo to nav

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,8 +1,8 @@
 <header class="site-header">
-<!--  <div class="logo_container">-->
-<!--    <img src="./assets/images/image_123650291.JPG" alt="pil_logo" class="header_logo">-->
-<!--  </div>-->
-  <h1 class="header_title">ReformFlow Studio</h1>
+  <div class="logo_container">
+    <img src="./assets/icons/reformflow_grey%20logo_CMYK.svg" alt="pil_logo" class="header_logo">
+    <h1 class="header_title">ReformFlow Studio</h1>
+  </div>
   <input type="checkbox" id="check" [checked]="menuOpen" (change)="toggleMenu()" hidden>
   <label for="check" class="icons">
     <i class="bx bx-menu" id="menu-icon" *ngIf="!menuOpen"></i>
