--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -15,15 +15,14 @@
 
 
   .logo_container {
-    height: 80%;
+    display: flex;
+    align-items: center;
   }
 
   .header_logo {
     display: block;
-    position: absolute;
+    position: relative;
     border-radius: 50%;
-    top: -5px;
-    left: -3px;
     height: 98px;
     width: auto;
     object-fit: contain;
@@ -33,7 +32,6 @@
     display: inline-block;
     color: #FFFFFF;
     font-weight: 200;
-    margin: 0 0 0 50px;
 
     @include atMedium {
     }
