chagne global font family to pt sans

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import './assets/modules/_colors.scss';
 
 html, body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'pt sans', sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
