--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -7,7 +7,8 @@
   top: 0;
   width: 100%;
   height: 75px;
-  background: linear-gradient(90deg, rgba(209, 208, 215, 1) 0%, rgba(202, 173, 175, 1) 48%);
+  background: rgb(255,255,255);
+  background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,240,242,1) 17%, rgba(255,165,174,1) 50%, rgba(255,149,159,1) 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -30,7 +31,7 @@
 
   .header_title {
     display: inline-block;
-    color: #FFFFFF;
+    color: $mainRoseAsh;
     font-weight: 200;
 
     @include atMedium {
