--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -32,9 +32,9 @@
 }
 
 .about-us_container {
+  text-align: center;
 
   &__heading {
-    text-align: center;
 
     @include atLarge {
       margin-top: 0;
@@ -42,8 +42,7 @@
   }
 
   &__description {
-    text-align: center;
-    max-width: 15.625rem;
+    padding: 0 100px;
   }
 }
 
