adjust padding and width for about-us container

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -43,6 +43,14 @@
 
   &__description {
     padding: 0 100px;
+
+    @include atMedium{
+      padding: 0;
+    }
+  }
+
+  @include atMedium {
+    width: 15%;
   }
 }
 
