replace img tags for icons with ng-icon components from ng-icon

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -69,7 +69,7 @@
     list-style: none;
     margin-bottom: 0.9375rem;
 
-    img {
+    .ng_icons {
       width: 2rem;
       height: 2rem;
       list-style: none;
