--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -8,9 +8,9 @@
   <div class="social-media_container">
     <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
     <ul class="social-media_container__list">
-      <li><a href="https://www.instagram.com/reformflowstudio/"><img src="./assets/icons/instagram.svg" alt="instagram icon">Instagram</a></li>
-      <li><a href=""><img src="./assets/icons/facebook.svg" alt="facebook icon">Facebook</a></li>
-      <li><a href=""><img src="./assets/images/tiktok2.png" alt="tiktok icon">TikTok</a></li>
+      <li><a href="https://www.instagram.com/reformflowstudio/"><ng-icon class="ng_icons" name="bootstrapInstagram"></ng-icon>Instagram</a></li>
+      <li><a href=""><ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>Facebook</a></li>
+      <li><a href=""><ng-icon class="ng_icons" name="bootstrapTikTok"></ng-icon>TikTok</a></li>
     </ul>
   </div>
   <div class="contacts_container">
