--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -10,16 +10,16 @@
     <ul class="social-media_container__list">
       <li><a href="https://www.instagram.com/reformflowstudio/"><ng-icon class="ng_icons" name="bootstrapInstagram"></ng-icon>Instagram</a></li>
       <li><a href=""><ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>Facebook</a></li>
-      <li><a href=""><ng-icon class="ng_icons" name="bootstrapTikTok"></ng-icon>TikTok</a></li>
+      <li><a href=""><ng-icon class="ng_icons" name="bootstrapTiktok"></ng-icon>TikTok</a></li>
     </ul>
   </div>
   <div class="contacts_container">
     <h4 class="contacts_container__heading">{{ 'MAIN.FOOTER.CONTACTS.HEADER' | translate }}</h4>
     <ul class="contacts_container__list">
-      <li><a type="phone" href="tel:+1234567890"><i class="fa-solid fa-phone"></i>+359 88888888</a></li>
+      <li><a type="phone" href="tel:+1234567890"><ng-icon class="ng_icons" name="bootstrapTelephoneFill"></ng-icon>+359 88888888</a></li>
       <li><a
-        href="https://g.co/kgs/Rp5DPvw"><i class="fa-solid fa-location-arrow"></i>{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
-      <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg"><i class="fa-solid fa-envelope"></i>{{ 'ven@abv.bg' }}</a></li>
+        href="https://g.co/kgs/Rp5DPvw"><ng-icon class="ng_icons" name="bootstrapPinMapFill"></ng-icon>{{ 'MAIN.FOOTER.CONTACTS.CONTACTS_LIST.LOCATION' | translate }}</a></li>
+      <li><a type="mail" href="mailto:lyubomir_vasilev1992@abv.bg"><ng-icon class="ng_icons" name="bootstrapEnvelopeOpenFill"></ng-icon>{{ 'ven@abv.bg' }}</a></li>
     </ul>
   </div>
 </div>
