create form for reservations and styling

--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.html
@@ -1,1 +1,39 @@
-<p>reservations-page-section works!</p>
+<h1 class="section-title">{{ 'MAIN.RESERVATIONS.TITLE' | translate }}</h1>
+
+<div class="form-container">
+  <h2 class="form_header">{{ 'MAIN.RESERVATIONS.FORM.TITLE' | translate }}</h2>
+
+  <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+    <!-- Name Input -->
+    <div class="form-group">
+      <label for="name">Full Name:</label>
+      <input id="name" type="text" formControlName="name" placeholder="Enter your name">
+      <small *ngIf="userForm.controls['name'].invalid && userForm.controls['name'].touched" class="error">
+        Name must be at least 3 characters.
+      </small>
+    </div>
+
+    <!-- Email Input -->
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input id="email" type="email" formControlName="email" placeholder="Enter your email">
+      <small *ngIf="userForm.controls['email'].invalid && userForm.controls['email'].touched" class="error">
+        Enter a valid email.
+      </small>
+    </div>
+
+    <!-- Date Input -->
+    <div class="form-group">
+      <label for="date">Select Date:</label>
+      <input id="date" type="date" formControlName="date">
+      <small *ngIf="userForm.controls['date'].invalid && userForm.controls['date'].touched" class="error">
+        Date is required.
+      </small>
+    </div>
+
+    <!-- Submit Button -->
+    <button type="submit" [disabled]="userForm.invalid">Request session</button>
+
+  </form>
+</div>
