--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -3,7 +3,7 @@
 @import '../../../../../assets/modules/generic-content-container';
 
 .section-title{
-  color: $mainRoseAsh;
+  color: grey;
 }
 
 .section-description {
