--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -16,52 +16,66 @@
       <img class="middle-hero__img" src="./assets/images/home/IMG_0001.jpeg" alt="main-section stretch image">
     </div>
   </div>
-  <div class="row row--gutters page-section">
-    <div class="row__4">
-      <img class="story-hero__img" src="./assets/images/owner.jpeg" alt="owner image">
-    </div>
-    <div class="row__8">
-      <h1 class="story-hero__heading">{{ 'MAIN.HOME.STORY_HEADING' | translate }}</h1>
-      <p class="story-hero__paragraph">{{ 'MAIN.HOME.STORY_PARAGRAPH' | translate }}</p>
-    </div>
-  </div>
-  <div class="features">
-    <div class="wrapper">
-      <h2 class="section-title"><img class="section-title__icon" src="./assets/icons/star.svg" alt="star icon">Benefits
-      </h2>
-      <div class="row row--gutters-large generic-content-container">
-        <div class="row__6">
-          <div class="feature-item">
-            <img class="feature-item__icon" src="./assets/icons/fire.svg" alt="feature icon">
-            <h3 class="feature-item__title">Improves physical health</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid asperiores, consequatur, deleniti
-              deserunt ipsum iure maxime nam nesciunt numquam officiis porro quos repudiandae sed soluta suscipit,
-              tempore vero voluptates?</p>
-          </div>
-          <div class="feature-item">
-            <img class="feature-item__icon" src="./assets/icons/rain.svg" alt="feature icon">
-            <h3 class="feature-item__title">Helps with high levels of stress</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cupiditate deleniti excepturi
-              illum magni odio odit optio perspiciatis qui totam? A blanditiis delectus laboriosam maiores provident,
-              quibusdam quo ratione reprehenderit.</p>
-          </div>
-        </div>
-        <div class="row__6">
-          <div class="feature-item">
-            <img class="feature-item__icon" src="./assets/icons/globe.svg" alt="feature icon">
-            <h3 class="feature-item__title">Different way of thinking</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, blanditiis doloremque eligendi facere
-              illum modi nobis non nostrum nulla officia suscipit, voluptatem! Facere facilis itaque, laudantium optio
-              pariatur qui quos!</p>
-          </div>
-          <div class="feature-item">
-            <img class="feature-item__icon" src="./assets/icons/wifi.svg" alt="feature icon">
-            <h3 class="feature-item__title">Fast access to our services at any time.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum distinctio dolores expedita, iusto minus,
-              nihil non porro quibusdam quisquam, quo rerum voluptas. Distinctio ex necessitatibus nisi, porro quibusdam
-              rem voluptas?</p>
-          </div>
-        </div>
+<!--  <div class="row row&#45;&#45;gutters page-section">-->
+<!--    <div class="row__4">-->
+<!--      <img class="story-hero__img" src="./assets/images/owner.jpeg" alt="owner image">-->
+<!--    </div>-->
+<!--    <div class="row__8">-->
+<!--      <h1 class="story-hero__heading">{{ 'MAIN.HOME.STORY_HEADING' | translate }}</h1>-->
+<!--      <p class="story-hero__paragraph">{{ 'MAIN.HOME.STORY_PARAGRAPH' | translate }}</p>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--  <div class="features">-->
+<!--    <div class="wrapper">-->
+<!--      <h2 class="section-title"><img class="section-title__icon" src="./assets/icons/star.svg" alt="star icon">Benefits-->
+<!--      </h2>-->
+<!--      <div class="row row&#45;&#45;gutters-large generic-content-container">-->
+<!--        <div class="row__6">-->
+<!--          <div class="feature-item">-->
+<!--            <img class="feature-item__icon" src="./assets/icons/fire.svg" alt="feature icon">-->
+<!--            <h3 class="feature-item__title">Improves physical health</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid asperiores, consequatur, deleniti-->
+<!--              deserunt ipsum iure maxime nam nesciunt numquam officiis porro quos repudiandae sed soluta suscipit,-->
+<!--              tempore vero voluptates?</p>-->
+<!--          </div>-->
+<!--          <div class="feature-item">-->
+<!--            <img class="feature-item__icon" src="./assets/icons/rain.svg" alt="feature icon">-->
+<!--            <h3 class="feature-item__title">Helps with high levels of stress</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur cupiditate deleniti excepturi-->
+<!--              illum magni odio odit optio perspiciatis qui totam? A blanditiis delectus laboriosam maiores provident,-->
+<!--              quibusdam quo ratione reprehenderit.</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--        <div class="row__6">-->
+<!--          <div class="feature-item">-->
+<!--            <img class="feature-item__icon" src="./assets/icons/globe.svg" alt="feature icon">-->
+<!--            <h3 class="feature-item__title">Different way of thinking</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, blanditiis doloremque eligendi facere-->
+<!--              illum modi nobis non nostrum nulla officia suscipit, voluptatem! Facere facilis itaque, laudantium optio-->
+<!--              pariatur qui quos!</p>-->
+<!--          </div>-->
+<!--          <div class="feature-item">-->
+<!--            <img class="feature-item__icon" src="./assets/icons/wifi.svg" alt="feature icon">-->
+<!--            <h3 class="feature-item__title">Fast access to our services at any time.</h3>-->
+<!--            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum distinctio dolores expedita, iusto minus,-->
+<!--              nihil non porro quibusdam quisquam, quo rerum voluptas. Distinctio ex necessitatibus nisi, porro quibusdam-->
+<!--              rem voluptas?</p>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+  <h2 class="section-title">Frequently Asked Questions</h2>
+
+  <div class="faq-container page-section">
+
+    <div *ngFor="let faq of faqs; let i = index" class="faq" (click)="toggleFaq(i)">
+      <div class="question">
+        {{ faq.question }}
+        <span class="arrow" [class.rotate]="faq.isOpen"> </span>
+      </div>
+      <div class="answer-container" [class.open]="faq.isOpen">
+        <div class="answer">{{ faq.answer }}</div>
       </div>
     </div>
   </div>
