--- a/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
+++ b/src/app/components/app-main-section/components/reservations-page-section/reservations-page-section.component.scss
@@ -3,11 +3,11 @@
 @import '../../../../../assets/modules/generic-content-container';
 
 .section-title{
-  color: $mainRoseAsh;
+  color: grey;
 }
 
 .form_header{
-  color: $mainRoseAsh;
+  color: grey;
 }
 
 .form-container {
