--- a/src/assets/modules/_btn.scss
+++ b/src/assets/modules/_btn.scss
@@ -1,6 +1,6 @@
 
 .btn {
-  background-color: #FF959F;
+  background-color: #F8B4B1;
   color: #FFF;
   padding: 1.2rem 2rem;
   display: inline-block;
