add new feaures for home page header prices and gallery

--- a/src/app/components/app-footer/app-footer.component.scss
+++ b/src/app/components/app-footer/app-footer.component.scss
@@ -115,6 +115,7 @@
         text-decoration: none;
         display: flex;
         align-items: center;
+        white-space: pre-line;
       }
 
       i {
