--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.scss
@@ -11,23 +11,23 @@
 }
 
 .container {
-  max-width: 75rem;
+  //max-width: 75rem;
   margin: 0 auto;
   padding: 0 1.25rem;
 }
 
 .section-title {
-  color: $mainRoseAsh;
+  color: grey;
+  margin-bottom: 5px;
 }
 
 .group_trainings_title {
-  margin-top: 12.5rem;
+  margin-top: 6.5rem;
 }
 
 .section-description {
   text-align: center;
   font-size: 1.25rem;
-  margin-bottom: 2.5rem;
 }
 
 .price-table {
@@ -39,20 +39,20 @@
 .price-table th, .price-table td {
   text-align: center;
   padding: 0.9375rem;
-  border: 0.0625rem solid #ddd;
+  //border: 0.0625rem solid #ddd;
 }
 
 .price-table th {
-  background-color: #f4f4f4;
+  //background-color: #f4f4f4;
   font-size: 1.125rem;
 }
 
 .price-table td {
-  background-color: #fff;
+  //background-color: #fff;
 }
 
-.price-table tr:nth-child(even) td {
-  background-color: #e4dfdf;
-}
+//.price-table tr:nth-child(even) td {
+//  background-color: #e4dfdf;
+//}
 
 
