--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -9,8 +9,8 @@
     <h4 class="social-media_container__heading">{{ 'MAIN.FOOTER.SOCIAL_MEDIA.HEADER' | translate }}</h4>
     <ul class="social-media_container__list">
       <li><a href="https://www.instagram.com/reformflowstudio/"><ng-icon class="ng_icons" name="bootstrapInstagram"></ng-icon>Instagram</a></li>
-      <li><a href=""><ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>Facebook</a></li>
-      <li><a href=""><ng-icon class="ng_icons" name="bootstrapTiktok"></ng-icon>TikTok</a></li>
+      <li><a href="https://www.facebook.com/share/1BuCzMbYMY/?mibextid=wwXIfr"><ng-icon class="ng_icons" name="bootstrapFacebook"></ng-icon>Facebook</a></li>
+      <li><a href="https://www.tiktok.com/@reformflowstudio?_t=ZN-8vEIY3lqNgU&_r=1"><ng-icon class="ng_icons" name="bootstrapTiktok"></ng-icon>TikTok</a></li>
     </ul>
   </div>
   <div class="contacts_container">
