--- a/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
+++ b/src/app/components/app-main-section/components/gallery-page-section/gallery-page-section.component.scss
@@ -7,6 +7,7 @@
 }
 
 .section-description {
+  color: grey;
   text-align: center;
   font-size: 1.25rem;
   margin-bottom: 2.5rem;
@@ -14,16 +15,22 @@
 
 .carousel {
   position: relative;
-  max-width: 1200px;
+  max-width: 1000px;
   margin: auto;
   overflow: hidden;
-  border-radius: 10px;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+  //box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .carousel-images {
   display: flex;
   transition: transform 0.5s ease-in-out;
+  height: 760px;
+
+  img {
+    object-fit: contain;
+    border-radius: 20px;
+  }
 }
 
 img {
@@ -64,7 +71,7 @@ button {
 .dot {
   height: 10px;
   width: 10px;
-  margin: 5px;
+  margin: 0 5px 5px;
   background-color: gray;
   border-radius: 50%;
   display: inline-block;
