--- a/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
+++ b/src/app/components/app-main-section/components/main-page-section/app-main-page-section.component.html
@@ -1,7 +1,7 @@
 <div class="main-section">
   <div class="intro-hero">
     <img src="./assets/images/IMG_9979.jpeg" alt="main-section image">
-    <div class="intro-hero__text-content">
+    <div class="intro-hero__text-content page-section">
       <h1 class="intro-hero__title">ReformFlow</h1>
       <h2 class="intro-hero__subtitle">{{ 'MAIN.HOME.SUBTITLE' | translate }}</h2>
       <p class="intro-hero__paragraph">Providing the best care for your body and mind that will be appreciated by your
