--- a/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
+++ b/src/app/components/app-main-section/components/prices-page-section/prices-page-section.component.html
@@ -1,50 +1,53 @@
-<section id="pilates-prices" class="pilates-prices-section">
+<section id="pilates-prices">
   <div class="container">
     <h2 class="section-title">{{ 'MAIN.PRICES.PRICES_TITLE' | translate }}</h2>
     <p class="section-description">{{ 'MAIN.PRICES.PRICES_PARAGRAPH' | translate }}</p>
 
-    <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h1>
-    <table class="price-table">
-      <thead>
-      <tr>
-        <th>{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</th>
-        <th>{{ 'MAIN.PRICES.TABLE.PRICES' | translate }}</th>
-        <th>{{ 'MAIN.PRICES.TABLE.VISITS' | translate }}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr>
-        <td>1 {{ 'MAIN.PRICES.TABLE.TRAINING' | translate }}</td>
-        <td>35 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.SINGLE_TRAINING' | translate }}</td>
-      </tr>
-      <tr>
-        <td>4 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>120 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
-      </tr>
-      <tr>
-        <td>8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>200 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
-      </tr>
-      <tr>
-        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>270 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
-      </tr>
-      <tr>
-        <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>300 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
-      </tr>
-      <tr>
-        <td>18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
-        <td>400 BGN</td>
-        <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
-      </tr>
-      </tbody>
-    </table>
+    <div class="table_group_container">
+      <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.GROUP_TRAININGS' | translate }}</h1>
+      <table class="price-table">
+        <thead>
+        <tr>
+          <th>{{ 'MAIN.PRICES.TABLE.CLASSES' | translate }}</th>
+          <th>{{ 'MAIN.PRICES.TABLE.PRICES' | translate }}</th>
+          <th>{{ 'MAIN.PRICES.TABLE.VISITS' | translate }}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+          <td>1 {{ 'MAIN.PRICES.TABLE.TRAINING' | translate }}</td>
+          <td>35 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.SINGLE_TRAINING' | translate }}</td>
+        </tr>
+        <tr>
+          <td>4 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+          <td>120 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
+        </tr>
+        <tr>
+          <td>8 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+          <td>200 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
+        </tr>
+        <tr>
+          <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+          <td>270 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.PER_MONTH' | translate }}</td>
+        </tr>
+        <tr>
+          <td>12 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+          <td>300 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
+        </tr>
+        <tr>
+          <td>18 {{ 'MAIN.PRICES.TABLE.TRAININGS' | translate }}</td>
+          <td>400 BGN</td>
+          <td>{{ 'MAIN.PRICES.TABLE.TWO_MONTHS' | translate }}</td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+
     <h1 class="section-title group_trainings_title">{{ 'MAIN.PRICES.INDIVIDUAL_TRAININGS' | translate }}</h1>
     <table class="price-table">
       <thead>
